# dragon-clawed-tui

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
scripts/: launch_claw_code_agent_terminal.sh  launch_clawed_tui_desktop.sh
src/: __init__.py  agent_context.py  agent_context_usage.py  agent_manager.py  agent_prompting.py  agent_runtime.py  agent_session.py  agent_slash_commands.py  agent_tools.py  agent_types.py  clawed_entry.py  main.py  openai_compat.py  plugin_runtime.py  query_engine.py  service_supervisor.py  session_store.py  textual_tui_app.py  tui_app.py  voice_input.py
tests/: test_agent_acceptance.py  test_agent_context.py  test_agent_context_usage.py  test_agent_prompting.py  test_agent_runtime.py  test_agent_slash_commands.py  test_context_error_detection.py  test_launcher_contract.py  test_query_engine_runtime.py  test_service_supervisor.py  test_textual_tui_app.py  test_tui_app.py  test_voice_input.py
